[package]
name = "log-panics"
version = "2.1.0"
edition = "2024"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A panic hook which logs panic messages rather than printing them"
repository = "https://github.com/sfackler/rust-log-panics"
readme = "README.md"

[features]
with-backtrace = ["backtrace"]

[dependencies]
log = "0.4"
backtrace = { version = "0.3", optional = true }
flume = { version = "0.11.1", default-features = false, features = ["async"] }

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "*", features = ["full"] }

[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
